add allowedCustomers getter